# pyatv-api

./: Dockerfile  README.md  flake.nix  pyproject.toml  server.py
.github/workflows/: docker.yml
