[tool.poetry]
name = "pyatv-api"
version = "0.1.0"
description = ""
authors = ["Benjamin Caldwell"]

[tool.poetry.dependencies]
python = "^3.10"
pyatv = "^0.10.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
